samples/_failures_safe/1761296276_5b369e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c7d41d2e.c: In function ‘main’:
./samples/SAFE/__tmp_c7d41d2e.c:159:29: error: expected ‘)’ at end of input
  159 |     print_analysis(&analyzer
      |                   ~         ^
      |                             )
./samples/SAFE/__tmp_c7d41d2e.c:159:5: error: expected declaration or statement at end of input
  159 |     print_analysis(&analyzer
      |     ^~~~~~~~~~~~~~
